tiansh-all-yamls/06_dubhe_pvc_nfs.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: dubhe-system
  # 先创建了命名空间：dubhe-system
