tiansh-all-yamls/05_distribute_train_operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: distribute-train-operator
  namespace: kube-system
  labels:
    name: distribute-train-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: distribute-train-operator
  template:
    metadata:
      labels:
        name: distribute-train-operator
    spec:
      nodeSelector:
        # <your-k8s-host-name>是部署operator的Kubernetes节点hostname
        # 固定部署到节点“k8wor02”上
        kubernetes.io/hostname: k8wor02
      containers:
      - name: distribute-train-operator
        image: k8fri.cluster.local/distribute-train/distribute-train-operator:v1
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /root
          name: config-volume
        imagePullPolicy: IfNotPresent
      volumes:
        - name: config-volume
          hostPath:
            #将Kubernetes集群 master节点的 $HOME/.kube/config 文件复制到 <your-k8s-host-name>节点（即“k8wor02”）的 /root/.kube/ 目录下
            path: /root/.kube/
            type: 
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsUser: 0
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 7
  progressDeadlineSeconds: 600
